update: get all user API 수정
