# src/api/request/UserSearchReq.ts
@@ -4,6 +4,8 @@ import { PageReq } from "./PageReq";
 export class UserSearchReq extends PageReq {
   name: string;
   public_address: string;
+  user_toxic_project: string;
+  user_catbotica_project: string;
 
   get getName() {
     return this.name ? this.name : "";
@@ -11,5 +13,13 @@ export class UserSearchReq extends PageReq {
 
   get getAddress() {
     return this.public_address ? this.public_address : "";
+  }
+
+  get getUserToxicProject() {
+    return this.user_toxic_project ? this.user_toxic_project : "";
+  }
+
+  get getUserCatboticaProject() {
+    return this.user_catbotica_project ? this.user_catbotica_project : "";
   }
 }
